--- a/App/Admin/View/Employee/edit.html
+++ b/App/Admin/View/Employee/edit.html
@@ -32,12 +32,11 @@
                 <div class="ibox-content">
                     <form class="form-horizontal" id="submit-menu">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">父级菜单</label>
+                            <label class="col-sm-2 control-label">部门</label>
 
                             <div class="col-sm-10">
-                                <select class="form-control m-b" id="parentName" name="pid">
-                                    <option value="0">顶级菜单</option>
-                                    <foreach name="cate" item="v">
+                                <select class="form-control m-b" id="parentName" name="departmentId">
+                                    <foreach name="departmentName" item="v">
                                         <option value="{$v.id}" <if condition="$data['pid'] eq $v['id']">selected="selected"</if>>{$v.delimiter}{$v.name}</option>
                                     </foreach>
                                 </select>
@@ -45,60 +44,22 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">菜单名称</label>
+                            <label class="col-sm-2 control-label">职位</label>
+
+                            <div class="col-sm-10">
+                                <select class="form-control m-b" id="parentName1" name="officeId">
+                                    <foreach name="officeName" item="v">
+                                        <option value="{$v.id}" <if condition="$data['pid'] eq $v['id']">selected="selected"</if>>{$v.delimiter}{$v.name}</option>
+                                    </foreach>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">人员名称</label>
 
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="name" value="{$data.name}">
-                            </div>
-                        </div>
-                        <div class="hr-line-dashed"></div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">模块名称</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="module" value="{$data.module}">
-                            </div>
-                        </div>
-                        <div class="hr-line-dashed"></div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">方法名称</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="action" value="{$data.action}">
-                            </div>
-                        </div>
-                        <div class="hr-line-dashed"></div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">附加参数</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="parameter" value="{$data.parameter}">
-                            </div>
-                        </div>
-                        <div class="hr-line-dashed"></div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">菜单排序</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="sort" value="{$data.sort}">
-                            </div>
-                        </div>
-                        <div class="hr-line-dashed"></div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">是否显示
-                            </label>
-
-                            <div class="col-sm-10">
-                                <div class="radio">
-                                    <label>
-                                        <input type="radio" value="1" id="optionsRadios1"
-                                               name="status" <if condition="$data.status eq 1">checked="checked"</if>>显示</label>
-                                </div>
-                                <div class="radio">
-                                    <label>
-                                        <input type="radio" value="0" id="optionsRadios2" name="status" <if condition="$data.status eq 0">checked="checked"</if>>隐藏</label>
-                                </div>
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
@@ -136,7 +97,7 @@
         })
         console.log(postData);
         //将获取到德数据post给服务器
-        url = '{:U("Menu/edit")}';
+        url = '{:U("edit")}';
         $.post(url, postData, function (result) {
             if (result.status == 1) {
                 //成功
@@ -148,7 +109,7 @@
         }, "JSON");
     });
     $("#button-cancal").click(function () {
-        window.location.href = '{:U("Menu/index")}'
+        window.location.href = '{:U("employeeList")}'
     })
 </script>
 </body>
