--- a/App/Admin/View/Plan/planList.html
+++ b/App/Admin/View/Plan/planList.html
@@ -87,7 +87,7 @@
                                         <a href="javascript:void(0)"
                                            attr-message="删除"
                                            class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除
+                                           attr-id="{$v['id']}">删除</a>
                                     </td>
                                 </tr>
                             </foreach>
