--- a/App/Admin/View/ClassSetting/classList.html
+++ b/App/Admin/View/ClassSetting/classList.html
@@ -55,6 +55,7 @@
                                 <th></th>
                                 <th>名称</th>
                                 <th>时间</th>
+                                <th>区域</th>
                                 <th>操作</th>
                             </tr>
                             </thead>
@@ -70,6 +71,7 @@
                                         {$v.name}
                                     </td>
                                     <td>{$v.starttime}--{$v.endtime}</td>
+                                    <td>{$v.scorename}</td>
                                     <td>
                                         <a href="{:U('edit',array('id' => $v['id']))}"
                                            class="btn btn-primary btn-rounded">编辑班次</a>
@@ -77,6 +79,7 @@
                                            attr-message="删除"
                                            class="btn btn-primary btn-rounded" id="zzcms-delete"
                                            attr-id="{$v['id']}">删除删除
+                                            </a>
                                     </td>
                                 </tr>
                             </foreach>
