--- a/App/Admin/View/ClassSetting/add.html
+++ b/App/Admin/View/ClassSetting/add.html
@@ -66,6 +66,19 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">管理区域</label>
+
+                            <div class="col-sm-10">
+                                <select class="form-control m-b"  name="scoreId">
+                                    <option value="0">请选择</option>
+                                    <foreach name="scoreName" item="v">
+                                        <option value="{$v.id}">{$v.name}</option>
+                                    </foreach>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <button class="btn btn-primary" type="button" id="button-add">保存内容</button>
                                 <button class="btn btn-white" type="button" id="button-cancal">取消返回</button>
