--- a/App/Admin/View/Level/levelList.html
+++ b/App/Admin/View/Level/levelList.html
@@ -44,7 +44,7 @@
                 <div class="ibox-content">
                     <div class="row">
                         <div class="">
-                            <a href="{:U('add')}" class="btn btn-primary ">新增菜单</a>
+                            <a href="{:U('add')}" class="btn btn-primary ">新增</a>
                         </div>
                     </div>
                     <div class="table-responsive">
