登陆session值set完成并且可以传递

--- a/App/Admin/View/SeoWebAccount/update.html
+++ b/App/Admin/View/SeoWebAccount/update.html
@@ -35,7 +35,8 @@
                             <label class="col-sm-2 control-label">用户名</label>
 
                             <div class="col-sm-10">
-                                <input type="text" disabled="" placeholder="{$data.name}" class="form-control" name="name">
+                                <p class="form-control-static">{$username}</p>
+                                <!--<input type="text" disabled="" placeholder="{$data.name}" class="form-control" name="name">-->
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
