--- a/App/Admin/View/SeoWebAdmin/edit.html
+++ b/App/Admin/View/SeoWebAdmin/edit.html
@@ -37,47 +37,46 @@
                             <div class="col-sm-10">
                                 <foreach name="platform" item="v">
                                     <label class="checkbox-inline i-checks">
-                                            <div class="icheckbox_square-green {$v.checked}" style="position: relative;">
-
-                                        <input name="platformid" type="checkbox" value="{$v.id}"
-                                               style="position: absolute; opacity: 0;">
-                                        <ins class="iCheck-helper"
-                                             style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
+                                        <!--<div class="icheckbox_square-green {$v.checked}" style="position: relative;">-->
+                                            <input name="platformid" type="checkbox" value="{$v.id}"
+                                                   style="position: absolute; opacity: 0;" <if condition="$v['checked'] eq 'checked'">checked="{$v.checked}</if>">
+                                            <ins class="iCheck-helper"
+                                                 style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
+                                        <!--</div>-->
+                                        {$v.platformname}
+                                    </label>
+                                </foreach>
                             </div>
-                            {$v.platformname}
-                            </label>
-                            </foreach>
                         </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">站点名称</label>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">站点名称</label>
 
-                    <div class="col-sm-10">
-                        <input type="text" value="{$data.websitename}" class="form-control" name="websitename">
-                    </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">域名</label>
+                            <div class="col-sm-10">
+                                <input type="text" value="{$data.websitename}" class="form-control" name="websitename">
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">域名</label>
 
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" value="{$data.websiteurl}" name="websiteurl">
-                    </div>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" value="{$data.websiteurl}" name="websiteurl">
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <div class="col-sm-4 col-sm-offset-2">
+                                <input type="hidden" value="{$id}" name="id">
+                                <button class="btn btn-primary" type="button" id="button-add">保存内容</button>
+                                <button class="btn btn-white" type="button" id="button-cancal">取消返回</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <div class="col-sm-4 col-sm-offset-2">
-                        <input type="hidden" value="{$id}" name="id">
-                        <button class="btn btn-primary" type="button" id="button-add">保存内容</button>
-                        <button class="btn btn-white" type="button" id="button-cancal">取消返回</button>
-                    </div>
-                </div>
-                </form>
             </div>
         </div>
     </div>
-</div>
 </div>
 
 <script src="__PUBLIC__/js/jquery.min.js?v=2.1.4"></script>
@@ -112,7 +111,7 @@
         })
         console.log(postData);
         //将获取到德数据post给服务器
-        url = '{:U("add")}';
+        url = '{:U("edit")}';
         $.post(url, postData, function (result) {
             if (result.status == 1) {
                 //成功
