--- a/App/Admin/View/SeoWebAdmin/edit.html
+++ b/App/Admin/View/SeoWebAdmin/edit.html
@@ -37,12 +37,12 @@
                             <div class="col-sm-10">
                                 <foreach name="platform" item="v">
                                     <label class="checkbox-inline i-checks">
-                                        <!--<div class="icheckbox_square-green {$v.checked}" style="position: relative;">-->
-                                            <input name="platformid" type="checkbox" value="{$v.id}"
-                                                   style="position: absolute; opacity: 0;" <if condition="$v['checked'] eq 'checked'">checked="{$v.checked}</if>">
-                                            <ins class="iCheck-helper"
-                                                 style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
-                                        <!--</div>-->
+                                        <input name="platformid" type="checkbox" value="{$v.id}"
+                                               style="position: absolute; opacity: 0;"
+                                        <if condition="$v['checked'] eq 'checked'">checked="{$v.checked}</if>
+                                        ">
+                                        <ins class="iCheck-helper"
+                                             style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
                                         {$v.platformname}
                                     </label>
                                 </foreach>
